Change log for duff
===================

Maintained since version 0.3.1.

2012-09-21  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (follow_links_mode): Corrected type (credits to Michael
 Tautschnig).

2012-09-07  Camilla Berglund  <elmindreda@elmindreda.org>

 * join-duplicates.sh: Removed redundant use of touch(1).

2012-03-30  Camilla Berglund  <elmindreda@elmindreda.org>

 * configure.ac: Enabled ISO Standard C.

 * duff.h duffdriver.c: Corrected order of types and typedefs.

2012-02-19  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_directory): Made asprintf error exit.

 * duffstring.c (vasprintf): Simplified allocation.
 * duffstring.c (vasprintf): Made internal buffer overflow an error.

 * join-duplicates.sh: Added missing IFS clearing.

2012-02-15  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h duffutil.c (init_digest): Renamed from digest_init.
 * duff.h duffutil.c (update_digest): Renamed from digest_update.
 * duff.h duffutil.c (finish_digest): Renamed from digest_finish.

 * duff.1: Updated language on the different modes.
 * duff.1: Updated examples.
 * join-duplicates.sh: Fixed a few duff invocation bugs.

2012-02-13  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Added documentation for -u flag.
 * duff.h (DUPLICATE): Renamed from REPORTED.
 * duffdriver.c (process_uniques): Added function.
 * duffdriver.c (process_args): Added logic for -u flag.
 * duff.c (main, usage): Added -u flag for listing unique instead of duplicate
 files.

2012-02-12  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffutil.c duff.h (PATH_SIZE_STEP): Added constant macro.

 * duff.1: Added documentation for -D flag.
 * dufffile.c (compare_files): Added logic for -D flag.
 * duff.c (main, usage): Added -D flag for limiting clusters to a single device.

 * duff.1: Various clarifications.

2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>
