@@ -3,6 +3,10 @@ Change log for duff
 
 Maintained since version 0.3.1.
 
+2013-07-21  Camilla Berglund  <elmindreda@elmindreda.org>
+
+ * dufffile.c duffutil.c: Removed superfluous casts of malloc and realloc.
+
 2012-09-21  Camilla Berglund  <elmindreda@elmindreda.org>
 
  * duffdriver.c (follow_links_mode): Corrected type (credits to Michael
